--- a/CSS/desktop.css
+++ b/CSS/desktop.css
@@ -13,6 +13,22 @@
   .first-section {
     padding-top: 188px;
     padding-bottom: 188px;
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images1/background-desktop.jpg);
+  }
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    .first-section {
+      background-image: linear-gradient(
+          rgba(46, 47, 66, 0.7),
+          rgba(46, 47, 66, 0.7)
+        ),
+        url(../images1/background-desktop-2x.jpg);
+    }
   }
   /* --------------- section Our Team --------------- */
   .team-list {
