--- a/CSS/tablet.css
+++ b/CSS/tablet.css
@@ -12,7 +12,25 @@
   }
   .first-section {
     padding-bottom: 108px;
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images1/background-tablet.jpg);
   }
+
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    .first-section {
+      background-image: linear-gradient(
+          rgba(46, 47, 66, 0.7),
+          rgba(46, 47, 66, 0.7)
+        ),
+        url(../images1/background-tablet-2x.jpg);
+    }
+  }
+
   /* --------------- section Our Team --------------- */
   .team-container {
     max-width: 582px;
