--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -119,12 +119,7 @@ header .logo {
 .header-container {
   display: flex;
   align-items: center;
-}
-
-.navigation.list {
-  display: flex;
-  align-items: center;
-  gap: 40px;
+  padding: 24px 16px;
 }
 
 .all-nav {
@@ -132,76 +127,25 @@ header .logo {
   margin-right: auto;
 }
 
-.auth-nav {
-  display: flex;
-  gap: 40px;
-}
-
-.nav-list {
-  display: inline-block;
-}
-
-.header-link {
-  padding-top: 24px;
-  padding-bottom: 24px;
-}
-
-.navigation .link {
-  color: var(--title-text-color);
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-
-  transition-property: color;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.navigation .link:hover,
-.navigation .link:focus {
-  color: var(--hover-color);
-}
-
-.navigation .link.current {
-  color: var(--accent-color);
-  position: relative;
-}
-
-.navigation .link.current::after {
-  content: "";
-  display: inline-block;
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  height: 4px;
-  background-color: var(--hover-color);
-  border-radius: 2px;
-  position: absolute;
-  left: 0;
-  bottom: 0;
-}
-
-.auth-nav .auth-link {
-  color: var(--primary-text-color);
-  display: block;
-  padding-top: 24px;
-  padding-bottom: 24px;
-  transition-property: color;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.auth-nav .auth-link:hover,
-.auth-nav .auth-link:focus {
-  color: var(--hover-color);
+.navigation.list {
+  display: none;
 }
 
 .address {
-  font-family: inherit;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
+  display: none;
+}
+
+.humburger-button {
+  width: 32px;
+  height: 22px;
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: auto;
 }
 /* main */
 
