--- a/CSS/tablet.css
+++ b/CSS/tablet.css
@@ -2,6 +2,87 @@
   .container {
     max-width: 766px;
   }
+
+  /* --------------------NAVIGATION-------------------- */
+  .navigation.list {
+    display: flex;
+    align-items: center;
+    gap: 40px;
+  }
+
+  .nav-item {
+    display: inline-block;
+  }
+
+  .header-link {
+    padding-top: 24px;
+    padding-bottom: 24px;
+  }
+
+  .address {
+    display: block;
+    font-family: inherit;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+  }
+
+  .address-list {
+    display: flex;
+    gap: 40px;
+  }
+
+  .navigation .link {
+    color: var(--title-text-color);
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .navigation .link:hover,
+  .navigation .link:focus {
+    color: var(--hover-color);
+  }
+
+  .navigation .link.current {
+    color: var(--accent-color);
+    position: relative;
+  }
+
+  .navigation .link.current::after {
+    content: "";
+    display: inline-block;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 4px;
+    background-color: var(--hover-color);
+    border-radius: 2px;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+  }
+
+  .address-list .address-link {
+    color: var(--primary-text-color);
+    display: block;
+    padding-top: 24px;
+    padding-bottom: 24px;
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .address-list .address-link:hover,
+  .address-list .address-link:focus {
+    color: var(--hover-color);
+  }
+
   /* ----------------First section ------------------ */
 
   .first-section-title {
