--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -111,6 +111,7 @@ header .logo {
 }
 
 .header {
+  position: relative;
   border-bottom: 1px solid #e7e9fc;
 }
 
@@ -146,6 +147,98 @@ header .logo {
   justify-content: center;
   align-items: center;
   margin-left: auto;
+}
+
+/* -------menu----------- */
+
+.mobile-menu {
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #ffffff;
+  padding-top: 24px;
+  padding-right: 24px;
+  padding-bottom: 40px;
+}
+
+.mobile-container {
+  padding-left: 40px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  overflow-y: auto;
+}
+
+.mobile-button-closer {
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  background: #e7e9fc;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+  padding: 0;
+  margin-bottom: 32px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: auto;
+}
+
+.mobile-menu-all-nav {
+}
+.mobile-menu-list {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+.list {
+}
+.mobile-menu-item {
+}
+.mobile-menu-link {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  color: var(--title-text-color);
+}
+
+.current {
+  color: var(--hover-color);
+}
+.mobile-menu-address {
+  padding-bottom: 40px;
+  font-style: normal;
+}
+.mobile-menu-address-list {
+  padding-bottom: 48px;
+}
+.mobile-menu-phone {
+  font-weight: 700;
+  font-size: 27px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  color: var(--accent-color);
+  padding-bottom: 40px;
+}
+@media screen and (min-width: 428px) {
+  .mobile-menu-phone {
+    font-size: 36px;
+  }
+}
+
+.mobile-menu-email {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: var(--primary-text-color);
 }
 /* main */
 
