--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -111,7 +111,7 @@ header .logo {
 }
 
 .header {
-  position: relative;
+  /* position: relative; */
   border-bottom: 1px solid #e7e9fc;
 }
 
@@ -155,17 +155,20 @@ header .logo {
   position: fixed;
   z-index: 1;
   top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   background-color: #ffffff;
-  padding-top: 24px;
-  padding-right: 24px;
-  padding-bottom: 40px;
+  padding: 24px 24px 40px 40px;
+
+  transform: translateX(100%);
+}
+
+.mobile-menu.is-open {
+  transform: translateX(0);
 }
 
 .mobile-container {
-  padding-left: 40px;
-  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -180,7 +183,6 @@ header .logo {
   border: 1px solid rgba(0, 0, 0, 0.1);
   cursor: pointer;
   padding: 0;
-  margin-bottom: 32px;
 
   display: flex;
   justify-content: center;
@@ -188,17 +190,12 @@ header .logo {
   margin-left: auto;
 }
 
-.mobile-menu-all-nav {
-}
 .mobile-menu-list {
   display: flex;
   flex-direction: column;
   gap: 40px;
 }
-.list {
-}
-.mobile-menu-item {
-}
+
 .mobile-menu-link {
   font-weight: 700;
   font-size: 36px;
