--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -159,9 +159,12 @@ header .logo {
   width: 100%;
   height: 100%;
   background-color: #ffffff;
-  padding: 24px 24px 40px 40px;
 
   transform: translateY(100%);
+}
+
+.mobile-container-all {
+  padding: 24px 24px 40px 40px;
 }
 
 .mobile-menu.is-open {
@@ -217,7 +220,7 @@ header .logo {
 }
 .mobile-menu-phone {
   font-weight: 700;
-  font-size: 27px;
+  font-size: 26px;
   line-height: 1.11;
   letter-spacing: 0.02em;
   text-transform: capitalize;
