--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -68,10 +68,6 @@ img {
   display: inline-block;
 }
 
-.address {
-  font-style: normal;
-}
-
 /* logo */
 
 .logo {
@@ -135,7 +131,6 @@ header .logo {
 .address {
   display: none;
 }
-
 .humburger-button {
   width: 32px;
   height: 22px;
@@ -147,6 +142,11 @@ header .logo {
   justify-content: center;
   align-items: center;
   margin-left: auto;
+}
+@media screen and (min-width: 768px) {
+  .humburger-button {
+    display: none;
+  }
 }
 
 /* -------menu----------- */
@@ -165,6 +165,7 @@ header .logo {
 
 .mobile-container-all {
   padding: 24px 24px 40px 40px;
+  height: 100%;
 }
 
 .mobile-menu.is-open {
@@ -172,6 +173,7 @@ header .logo {
 }
 
 .mobile-container {
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -466,7 +468,6 @@ header .logo {
 
 /* ---------------CUSTOMERS----------------- */
 
-/* footer */
 .customers-section {
   padding-top: 96px;
   padding-bottom: 96px;
@@ -518,15 +519,24 @@ header .logo {
   fill: #404bbf;
 }
 
-/* -------- footer------------------- */
+/* ------------------------ FOOTER------------------- */
 
 .footer-container {
   display: flex;
-  align-items: baseline;
+  flex-direction: column;
+  align-items: center;
+  /* align-items: baseline; */
+}
+
+.footer-wrap {
+  margin-bottom: 72px;
 }
 
 .companies {
-  margin-left: 120px;
+  /* margin-left: 120px; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .companies-text {
@@ -536,6 +546,13 @@ header .logo {
   letter-spacing: 0.02em;
   color: #ffffff;
   margin-bottom: 16px;
+}
+
+.footer-logo-text {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 72px;
 }
 
 footer .social-link {
@@ -563,7 +580,8 @@ footer .logo .web {
 }
 
 footer .logo {
-  margin-bottom: 16px;
+  /* margin-bottom: 16px; */
+  margin-bottom: 18px;
   color: var(--bc-color);
 }
 
@@ -577,13 +595,19 @@ footer .logo {
 }
 
 .footer-form {
-  margin-left: auto;
+  /* margin-left: auto; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
 }
 
 .footer-button-wrap {
   display: flex;
+  flex-direction: column;
   align-items: center;
   gap: 24px;
+  width: 100%;
 }
 
 .subscribe-text {
@@ -594,12 +618,22 @@ footer .logo {
   margin-bottom: 16px;
 }
 
+.footer-subscribe-input {
+  margin-bottom: 16px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .subscribe-input {
-  width: 264px;
+  /* width: 264px; */
+  width: 90%;
   height: 40px;
   padding-left: 16px;
   padding-top: 8px;
   padding-bottom: 8px;
+
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
@@ -818,20 +852,24 @@ footer .logo {
 .modal-icon-closer {
   fill: #000000;
 }
-
+.no-scrolle {
+  overflow: hidden;
+}
 .modal {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
-
-  width: 408px;
-  min-height: 576px;
+  overflow-y: auto;
+  width: calc(100% - 36px);
+  height: 90%;
+  max-width: 392px;
+  max-height: 586px;
   background-color: #fcfcfc;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
-  padding: 24px;
+  padding: 24px 16px;
 
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
