--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -705,15 +705,16 @@ footer .logo {
 }
 
 .portfolio-section {
-  padding-top: 96px;
-  padding-bottom: 120px;
+  padding-top: 48px;
+  padding-bottom: 48px;
 }
 
 .filter-btn-list {
   display: flex;
-  justify-content: center;
-  margin-bottom: 72px;
-  gap: 24px;
+  flex-wrap: wrap;
+  margin-bottom: 48px;
+  column-gap: 24px;
+  row-gap: 16px;
 }
 
 .filter-list {
@@ -745,7 +746,7 @@ footer .logo {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.04em;
-  padding: 12px 24px;
+  padding: 8px 16px;
   border: 1px solid #e7e9fc;
   border-radius: 4px;
 
