--- a/CSS/mobile.css
+++ b/CSS/mobile.css
@@ -9,3 +9,24 @@
     width: 320px;
   }
 }
+@media screen and (min-width: 428px) {
+  .first-section {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images1/background-tablet.jpg);
+  }
+
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    .first-section {
+      background-image: linear-gradient(
+          rgba(46, 47, 66, 0.7),
+          rgba(46, 47, 66, 0.7)
+        ),
+        url(../images1/background-tablet-2x.jpg);
+    }
+  }
+}
